syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

import "pkg/isolates/grpc/isolates-common.proto";

message CreatePodRequest {
	optional BaseInfo info = 1;

  optional string actionID = 2;
  optional string InstanceID = 3;
  optional int64 step = 4;
}

message CreatePodResponse {
  optional string ip = 1;
}
